# templates

./: README.md
cpp_py_template/: .cursorrules  .gitignore  DEVELOPMENT.md  README.md
cpp_py_template/cpp/: CMakelists.txt
cpp_py_template/cpp/src/: main.cpp  math_ops.cpp  pybind_wrapper.cpp
cpp_py_template/python/: __init__.py  math_ops_cpp.pyi  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_math_ops.py  test_repl.py
prompts/: cpp_py.txt
