[build-system]
requires = ["setuptools>=42.0.0", "wheel>=0.37.0", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "math_ops"
version = "0.1.0"
description = "A Python package wrapping C++ math operations using pybind11"
authors = [
    {name = "Your Name"}
]
requires-python = ">=3.7"
dependencies = [
    "pybind11>=2.10.0",
]

[tool.setuptools]
package-data = {"*" = ["py.typed"]}
zip-safe = false

[tool.setuptools.packages.find]
include = ["math_ops*"]
exclude = ["*.tests*", "*.test_*", "test_*"]

[[tool.setuptools.ext-modules]]
name = "math_ops_cpp"
sources = [
    "../cpp/src/pybind_wrapper.cpp",
    "../cpp/src/math_ops.cpp"
]
include-dirs = [
    "../cpp/src"
]
language = "c++" 